--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
 
     <section class="hero">
       <div class="hero-content">
-        <h1 class="hero-title">Welcome of PsalmStrings</h1>
+        <h1 class="hero-title">Welcome to PsalmStrings</h1>
         <p class="hero-description">
-          Watch the latest blockbusters and critically acclaimed films all in
-          one place.
+          Watch the latest blockbusters and create your personalize Watchlist.
         </p>
         <a href="./pages/sigup.html">
           <button class="signUp">Get Started</button>
@@ -38,19 +37,19 @@
         <div class="movies-container">
           <div class="movie-card">
             <img
-              src="../media/AAAABfVJZq3bV6nKMMhQI2Co82kWIFhUTTMrixPghqztQAsiZUkjPVOI9MuljNtBRXqRx5sJBMIgmDuEI1fpLZxkLQrgL_wJlk5Ft0s88tS6SizzKICwHVuTC_G8vPD0JZchd3hi.png"
+              src="./media/AAAABfVJZq3bV6nKMMhQI2Co82kWIFhUTTMrixPghqztQAsiZUkjPVOI9MuljNtBRXqRx5sJBMIgmDuEI1fpLZxkLQrgL_wJlk5Ft0s88tS6SizzKICwHVuTC_G8vPD0JZchd3hi.png"
               alt=""
             />
           </div>
           <div class="movie-card">
             <img
-              src="../media/AAAABfSjV_WrYEkA6aMtwGRknqc0jbBP-w5FEQjR3b0r2iC8C7rtoSajJlZdpLrCiEP2yCD6jBOD2QoAXDp7hG6dd1-3eePqkkb9W8o.png"
+              src="./media/AAAABfSjV_WrYEkA6aMtwGRknqc0jbBP-w5FEQjR3b0r2iC8C7rtoSajJlZdpLrCiEP2yCD6jBOD2QoAXDp7hG6dd1-3eePqkkb9W8o.png"
               alt=""
             />
           </div>
           <div class="movie-card">
             <img
-              src="../media/AAAABe-v06pN0a79Ly1CB3Xy69ySKauhnBKtisgukrcDAVCPDGhJEx1xg8cKTrFhUVtexFAQEVVE32WiKw5PjkTLJeBmdBEI0TnZhPk.png"
+              src="./media/AAAABe-v06pN0a79Ly1CB3Xy69ySKauhnBKtisgukrcDAVCPDGhJEx1xg8cKTrFhUVtexFAQEVVE32WiKw5PjkTLJeBmdBEI0TnZhPk.png"
               alt=""
             />
           </div>
@@ -59,7 +58,7 @@
             style="background-image: url('trending3.jpg')"
           >
             <img
-              src="../media/AAAABe3Y7aYMZTkJrHCP4U9I6raI1II6d62iamdF2I7jJ1KX3usCpveOqrfhX6o0JQ6UyBbYRvFvCqCjQTEdVcV4TTRYiMUDRjJ0PT0.png"
+              src="./media/AAAABe3Y7aYMZTkJrHCP4U9I6raI1II6d62iamdF2I7jJ1KX3usCpveOqrfhX6o0JQ6UyBbYRvFvCqCjQTEdVcV4TTRYiMUDRjJ0PT0.png"
               alt=""
             />
           </div>
@@ -68,7 +67,7 @@
             style="background-image: url('trending3.jpg')"
           >
             <img
-              src="../media/AAAABfuBxwODJWGpnxkkB_o4u6261-94UU3qXviCR10RUPHt_t2aUmLdxZSf9Ya1QPVE-RSGPIFap0ktl5E9IzJCdmOleGJlBtkgbJ9w5m7dY_HIg34-vtCLyJn7oD0YolAl8jOJ.png"
+              src="./media/AAAABfuBxwODJWGpnxkkB_o4u6261-94UU3qXviCR10RUPHt_t2aUmLdxZSf9Ya1QPVE-RSGPIFap0ktl5E9IzJCdmOleGJlBtkgbJ9w5m7dY_HIg34-vtCLyJn7oD0YolAl8jOJ.png"
               alt=""
             />
           </div>
@@ -77,7 +76,7 @@
             style="background-image: url('trending3.jpg')"
           >
             <img
-              src="../media/AAAABfVJZq3bV6nKMMhQI2Co82kWIFhUTTMrixPghqztQAsiZUkjPVOI9MuljNtBRXqRx5sJBMIgmDuEI1fpLZxkLQrgL_wJlk5Ft0s88tS6SizzKICwHVuTC_G8vPD0JZchd3hi.png"
+              src="./media/AAAABfVJZq3bV6nKMMhQI2Co82kWIFhUTTMrixPghqztQAsiZUkjPVOI9MuljNtBRXqRx5sJBMIgmDuEI1fpLZxkLQrgL_wJlk5Ft0s88tS6SizzKICwHVuTC_G8vPD0JZchd3hi.png"
               alt=""
             />
           </div>
@@ -86,7 +85,7 @@
             style="background-image: url('trending3.jpg')"
           >
             <img
-              src="../media/AAAABQI4nvvc7cBSIEzeLz1Tzo7j2c1RGppVHJVfKsfChmmtpn3dXpUgWG9SWK47luyU2--bwJhqgyWMfIsqKOivZvxVC8b1z-HEKhhF_8i8MPe9eYwaNxw04_geHILcsaDe_xZJTzW8Ru40-NVX2Eq1iMVa6PV9sMBYr5Q.png"
+              src="./media/AAAABQI4nvvc7cBSIEzeLz1Tzo7j2c1RGppVHJVfKsfChmmtpn3dXpUgWG9SWK47luyU2--bwJhqgyWMfIsqKOivZvxVC8b1z-HEKhhF_8i8MPe9eYwaNxw04_geHILcsaDe_xZJTzW8Ru40-NVX2Eq1iMVa6PV9sMBYr5Q.png"
               alt=""
             />
           </div>
